Preavis commission avec notification, systeme de notation des compagnies
